# Bank-Marketing-Automation

./: Dockerfile  README.md  main.py  pyproject.toml
data/: test.csv
model/: best_model.pkl
src/: best_model.pkl  notebook.ipynb  predict.py  test_endpoint.ipynb  train.py
